# deiss

./: Cargo.toml  README.md  justfile  rustfmt.toml  taplo.toml
assets/: LICENSE
crates/deiss/: Cargo.toml
crates/deiss/src/: config.rs  deiss_app.rs  main.rs
crates/deiss/src/audio/: console_listener.rs  listener.rs  mod.rs  playback.rs
crates/deiss/src/effects/: effect_dots.rs  effects.rs  flow.rs  flow_hub.rs  globals.rs  mod.rs  mode.rs  mode_blueprint.rs  mode_blueprint_library.rs  painter.rs  rgba_image.rs  settings.rs
crates/deiss/src/fx/: diminish_center.rs  dots.rs  grid.rs  mod.rs  nuclide.rs  one_dotty_chaser.rs  shade_bobs.rs  snack_bar.rs  solar_particles.rs  two_chasers.rs
crates/deiss/src/gui/: mod.rs
crates/deiss/src/painter/: flow.rs  flow_hub.rs  globals.rs  mod.rs  mode_blueprint.rs  mode_blueprint_library.rs  mode_id.rs  mode_pixel_transforms.rs  painter.rs  pixel_transform.rs  settings.rs  warp.rs  warp_hub.rs  wave.rs
crates/deiss/src/renderer/: blit_image_pipeline.rs  crt.wgsl  crt_pipeline.rs  egui_pipeline.rs  egui_renderer.rs  gpu.rs  mod.rs  pipeline_utils.rs  present_pipeline.rs  renderer.rs  screen_space_quad.wgsl  surface.rs  tonemap.wgsl
crates/deiss/src/utils/: image.rs  minstd.rs  mod.rs  rgba.rs  rot2.rs  shape.rs  vec.rs  vec2.rs
