[package]
edition = "2024"
name = "deiss"
version = "0.1.0"

[dependencies]
bytemuck = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
rodio = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
